fix: search icon mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -239,7 +239,7 @@ input {
 
 .search__icon {
   position: absolute;
-  top: 29%;
+  top: 13px;
   left: 2%;
   cursor: pointer;
   stroke: #5c596a;
@@ -310,6 +310,7 @@ input {
 
 @media screen and (max-width: 1100px) {
   .search__icon {
+    display: none;
     top: 23%;
     left: 1%;
   }
